# logger

./: README.md
logger/: CMakeLists.txt
logger/script/: run.sh
logger/src/: CMakeLists.txt  main.cpp
logger/src/CoreSDK/: CMakeLists.txt  Widget.cpp  Widget.h  singleton.cpp  singleton.h  uniquePtr.h
